--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mint-ui": "^2.2.13",
     "moment": "^2.20.1",
     "vue": "^2.5.13",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vue2-preview": "^1.0.1",
     "vuex": "^3.0.1"
