--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --open --port 3000 --contentBase src --hot"
+    "dev": "webpack-dev-server --open --port 3000 --contentBase src --hot --host 29.15.26.222"
   },
   "keywords": [],
   "author": "",
@@ -30,6 +30,7 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
     "url-loader": "^0.6.2",
+    "vue": "^2.5.13",
     "vue-loader": "^13.6.0",
     "vue-template-compiler": "^2.5.13",
     "webpack": "^3.10.0",
@@ -39,10 +40,11 @@
     "axios": "^0.17.1",
     "mint-ui": "^2.2.13",
     "moment": "^2.24.0",
+    "photoswipe": "^4.1.3",
     "vue": "^2.5.13",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
-    "vue2-preview": "^1.0.1",
+    "vue2-preview": "^1.0.5",
     "vuex": "^3.0.1"
   }
 }
