--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --open --port 3000 --contentBase src --hot --host 29.15.26.222"
+    "dev": "webpack-dev-server --open --port 3000 --contentBase src --hot"
   },
   "keywords": [],
   "author": "",
@@ -33,6 +33,7 @@
     "vue": "^2.5.13",
     "vue-loader": "^13.6.0",
     "vue-template-compiler": "^2.5.13",
+    "vuex": "^3.0.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
   },
@@ -44,6 +45,7 @@
     "vue": "^2.5.13",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
+    "vue-template-compiler": "^2.5.13",
     "vue2-preview": "^1.0.5",
     "vuex": "^3.0.1"
   }
